Fix display and vertical align items and remove all positioning items

--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -17,10 +17,10 @@ cite {
 }
 
 #external-links {
-  position: absolute;
+  /*position: absolute;*/
   display: inline-block;
   vertical-align:top;
-  width: 20%;
+  width: 10%;
   padding-right:10px;
   min-width: 216px;
 }
@@ -34,11 +34,10 @@ cite {
 }
 
 main {
-  position: absolute;
-  left: 204px; 
+  /*position: absolute;*/
+  /*left: 204px; */
   display:inline-block;
-  vertical-align: top;
-  width: 80%;
+  width: 50%;
   padding-left: 20px;
   min-width: 622px;
 
